# VitPOS

./: .env.example  .env.production  .gitignore  .vercelignore  AGENTS.md  PHASES.md  PROJECT_PLAN.md  README.md  capacitor.config.ts  drizzle.config.ts  eslint.config.js  findings.md  generate_purchase_detail.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  progress.md  query_test.ts  query_test_2.ts  query_test_3.ts  query_test_5.ts  replace.cjs  scratch-zustand.js  task_plan.md  tsconfig.app.json  typecheck_output.txt  vite.config.d.ts  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.omo/run-continuation/: ses_1598515a5ffeSFtgJXAq42ARMk.json  ses_15a26f371ffeggGC3cbMlF1bAD.json  ses_15a31c1fbffeR7f2t38b6pDChr.json  ses_15a33e86cffewLySWS3lOhIArL.json  ses_15a404bb0ffeGB5Ys5icFrmTXK.json  ses_15a4272c0ffeqWWEymEvRfrWuF.json  ses_15a542d8fffexooSbAtOUmDu1D.json  ses_15ad7b492ffeh30Mc6D80CIMI1.json  ses_15adf791effeMGs822RtMJ2BMq.json  (+3 more)
.planning/: .active_plan
android/: capacitor.settings.gradle
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
docs/: 2026-06-11-accounting-pos-integration-plan.md  README.md  SYNC_ENGINE.md  agent-changelog.md  sample-product-import-percetakan-atk.md
planning/: desktop-tauri-sqlite-adapter.md  sqlite-tauri-implementation-plan.md
scripts/: seed-baim.mjs  seed-grocery-enterprise.mjs  seed-platform-admin.mjs  sync-release-version.mjs
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
(+493 files in other folders)
