[package]
name = "vitpos-desktop"
version = "1.1.0"
description = "KOTACOM Business Suite - Desktop Shell"
authors = ["KOTACOM"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.1"
tauri-plugin-process = "2.1"
tauri-plugin-dialog = "2.1"
tauri-plugin-fs = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-sql = { version = "2.1", features = ["sqlite"] }
tauri-plugin-updater = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
